<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoanThanhTung.ViewThanhTung.Doi_ThongTinCaNhan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgThongTinDoi"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/log"></ImageView>

            <TextView
                android:id="@+id/tvTenDoiThongTinDoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.2in"
                android:gravity="center"
                android:text="Tên Đội"
                android:textColor="@color/colorXanhLa"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Doi_GioiThieu"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/tvGioiThieuThongTinDoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Nơi hội tụ nhân tài trẻ, mọi thành viên trong độ điều bình đẳng như nhau. Quyết thắng mọi đội thủ. Không bàn bạc vấn đề chình trị.
    I love"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Doi_TieuChi"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/tvTieuChiThongTinDoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Mọi thành viện hạ cái toi mình xuống"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Doi_Slogan"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/tvSloganThongTinDoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Xin được một lần thua trong đời"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Thông tin liên lạc"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.1in"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_Email"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/tvEmailThongTinDoi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="xinlanthua@gmail.com"></TextView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="0.1in">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_SDT"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/tvSDTThongTinDoi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="090610044798"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_KhuVuc"
                    android:textStyle="bold"></TextView>

               <Spinner
                   android:id="@+id/spKhuThongTinDoi"
                   android:layout_width="match_parent"
                   android:layout_weight="2"
                   android:layout_height="wrap_content"
                   android:entries="@array/listKhuVuc"
                   android:textAlignment="center"
                   android:background="@color/colorXanhLa"
                   android:gravity="center_horizontal"></Spinner>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>