<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoanThanhTung.ViewThanhTung.Doi_ThongTin_ChinhSua">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgChinhSuaTeam"
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/log"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Nhấn để chỉnh sủa ảnh"
                android:textSize="10dp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <TextView
                    style="@style/textViewTaoDoi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_TenDoi">

                </TextView>

                <EditText
                    android:id="@+id/txtTenDoiChinhSua"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text|textCapWords"
                    android:maxLength="8"
                    android:maxLines="1"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <TextView
                    style="@style/textViewTaoDoi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_KhuVuc"
                    ></TextView>

                <Spinner
                    android:id="@+id/spKhuVucChinhSua"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@color/colorXanhLa"
                    android:entries="@array/listKhuVuc"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <TextView
                    style="@style/textViewTaoDoi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_Email"
                    ></TextView>

                <EditText
                    android:id="@+id/txtEmailChinhSua"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text|textCapWords"
                    android:maxLength="20"
                    android:maxLines="1"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <TextView
                    style="@style/textViewTaoDoi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_SDT"
                    ></TextView>

                <EditText
                    android:id="@+id/txtSDTChinhSua"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text|textCapWords"
                    android:maxLength="11"
                    android:maxLines="1"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2">

                <TextView
                    style="@style/textViewTaoDoi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_GioiThieu"
                    ></TextView>

                <EditText
                    android:id="@+id/txtGioiThieuChinhSua"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:inputType="text|textCapWords"
                    android:maxLength="100"
                    android:maxLines="5"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <TextView
                    style="@style/textViewTaoDoi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_TieuChi"
                    ></TextView>

                <EditText
                    android:id="@+id/txtTieuChiChinhSua"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text|textCapWords"
                    android:maxLength="20"
                    android:maxLines="1"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1">

                <TextView
                    style="@style/textViewTaoDoi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Doi_Slogan"
                    ></TextView>

                <EditText
                    android:id="@+id/txtSloganChinhSua"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text|textCapWords"
                    android:maxLength="20"
                    android:maxLines="1"></EditText>
            </LinearLayout>

            <Button
                android:id="@+id/btnChinhSua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_shape_login"
                android:text="Chỉnh sửa"></Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>