<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".TranDuyHuynh.fragments.stadium_flagment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtSan"
            android:textColor="@color/colorBlack"
            android:textSize="30dp">

        </TextView>

        <Spinner
            android:id="@+id/spnKhuVuc_lstSan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"></Spinner>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:src="@drawable/btn_add">

        </ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:src="@drawable/btn_search"></ImageButton>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorSilver" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_list_stadiums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/shap_button_list_teams"
            android:backgroundTint="@color/colorSilver"
            android:text="@string/btn_danh_sach_san"
            android:textColor="@color/colorBlack"></Button>

        <Button
            android:id="@+id/btn_list_your_stadiums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/shap_button_list_teams"
            android:text="@string/btn_san_cua_ban"
            android:textColor="@color/colorBlack"></Button>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorSilver" />

    <ListView
        android:layout_marginTop="15dp"
        android:id="@+id/lstStadiums"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

    </ListView>


</LinearLayout>