<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_listview_doi_tim_tran"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgLogo_find_teams"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"></ImageView>

    <LinearLayout

        android:paddingLeft="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTenDoi"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDiaDiem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                android:text="@string/txtDiaDiem_lstView">

            </TextView>

            <TextView
                android:id="@+id/txtThongTinDiaDiem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorBlack">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNgay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                android:text="@string/txtNgay_lstView">

            </TextView>

            <TextView
                android:id="@+id/txtThongTinNgay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorBlack">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtGio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorBlack"
                android:text="@string/txtThoiGian_lstView">

            </TextView>

            <TextView
                android:id="@+id/txtThongTinGio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorBlack">

            </TextView>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_next"></ImageView>
</LinearLayout>
